--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
+.container {
+    font-family: 'Raleway', sans-serif;
+}
 .container .nav-bar {
     display: flex;
     justify-content: space-between;
     margin-block-start: 1.5rem;
-    font-family: 'Raleway', sans-serif;
+    align-items: center;
+   
 }
 .container .nav-bar .nav-bar-image img{
     margin-inline-start: 1rem;
+    width: 7.5rem;
 }
 .container .nav-bar .nav-bar-heading{
     display: flex;
