--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 :root{
     --mian-headingColor:hsl(243, 87%, 12%);
+    --main-color:hsl(240, 75%, 98%);
 }
 .container {
     font-family: 'Raleway', sans-serif;
@@ -77,7 +78,7 @@
     width: 170px;
     height: 36px;
     background-color: hsl(224, 93%, 58%);
-    color: white;
+    color: var(--main-color);
     border: none;
     border-radius: 3px;
 }
@@ -128,7 +129,7 @@
     color:hsl(172, 71%, 56%);
 }
 .container .productive .info-person-card{
-    background-color:white;
+    background-color:var(--main-color);
     width: 250px;
     padding: 10px 30px;
     margin-block-start: 2rem;
@@ -195,4 +196,63 @@
         width: 230px;
     }
     
+}
+.container .footer{
+    background-color:hsl(243.27, 93.22%, 12.35%) ;
+    color:var(--main-color);
+    display: grid;
+    grid-template-rows:100px 1fr;
+    padding: 3rem 2rem;
+    
+}
+@media (max-width:772px){
+    .container .footer{
+        display: block;
+        text-align: left;
+    }
+}
+
+.container .footer .footer-links{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    align-items: flex-start;
+}
+@media (max-width:772px){
+    .container .footer .footer-links{
+        display: block;
+        
+    }
+    
+}
+.container .footer .icons .icon {
+    margin-block-end: 2rem;
+}
+.container .footer a {
+    text-decoration: none;
+    color: var(--main-color);
+}
+.container .footer .link a{ 
+    display:block;
+    margin-block-end: 1rem;
+}
+.container .footer .social-icons{
+    display: flex;
+}
+.container .footer .social-icons i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius:50%;
+    border: 1px solid var(--main-color);
+    margin-inline-end: 20px;
+    width: 30px;
+    height: 30px;
+
+}
+.container .footer .link a:hover{
+    color: hsl(238, 22%, 44%);
+}
+.container .footer .social-icons i:hover{
+    color: hsl(238, 22%, 44%);
+    border-color: hsl(238, 22%, 44%);
 }
