end responsive of footer

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,9 @@
         display: block;
         text-align: left;
     }
+    .container .logo-footer{
+        margin-block-end: 2rem;
+    }
 }
 
 .container .footer .footer-links{
@@ -237,6 +240,11 @@
 }
 .container .footer .social-icons{
     display: flex;
+}
+@media (max-width:772px){
+    .container .social-icons{
+        justify-content: center;
+    }
 }
 .container .footer .social-icons i{
     display: flex;
